Switch back to G1GC. Update systemd templates
ZGC reporting was a bit inconsistent with memory usage and caused pauses in the master process, timing out ftp session.
Switching back to G1GC.